==> chcbaram/macro-touchpad/firmware/main-bd/esp32-s3/components/esp32-s3-hal/hw/driver/i2c.c <==
#include "i2c.h"
#include "cli.h"
#include "driver/i2c.h"
#include "hal/i2c_hal.h"
#include "hal/gpio_hal.h"
#include "soc/i2c_periph.h"

bool i2cBegin(uint8_t ch, uint32_t freq_khz)
{
  bool ret = false;
  esp_err_t esp_ret;
  i2c_config_t conf;


  if (ch >= I2C_MAX_CH)
  {
    return false;
  }


  switch(ch)
  {
    case _DEF_I2C1:
      i2c_freq[ch] = freq_khz;

      i2cReset(ch);

      if (is_begin[ch] == true)
      {
        i2c_driver_delete(i2c_tbl[ch].i2c_num);
      }

      conf.mode = I2C_MODE_MASTER;
      conf.sda_io_num = i2c_tbl[ch].sda_pin;
      conf.scl_io_num = i2c_tbl[ch].scl_pin;
      conf.sda_pullup_en = GPIO_PULLUP_ENABLE;
      conf.scl_pullup_en = GPIO_PULLUP_ENABLE;
      conf.master.clk_speed = freq_khz * 1000;
      conf.clk_flags = 0;

      esp_ret  = i2c_param_config(i2c_tbl[ch].i2c_num, &conf);
      esp_ret |= i2c_driver_install(i2c_tbl[ch].i2c_num, conf.mode, 0, 0, 0);
      if (esp_ret == ESP_OK)
      {
        ret = true;
        is_begin[ch] = true;
        logPrintf("[OK] i2cBegin(%d)\n", ch);
      }
      else
      {
        logPrintf("[NG] i2cBegin(%d)\n", ch);
      }
      break;
  }

  return ret;
}

void i2cReset(uint8_t ch)
{
  i2c_tbl_t *p_pin = &i2c_tbl[ch];


  gpio_reset_pin(p_pin->scl_pin);
  gpio_set_direction(p_pin->scl_pin, GPIO_MODE_OUTPUT);

  gpio_reset_pin(p_pin->sda_pin);
  gpio_set_direction(p_pin->sda_pin, GPIO_MODE_OUTPUT);


  gpio_set_level(p_pin->scl_pin, 1);
  gpio_set_level(p_pin->sda_pin, 1);
  delayUs(5);

  for (int i = 0; i < 9; i++)
  {
    gpio_set_level(p_pin->scl_pin, 0);
    delayUs(5);
    gpio_set_level(p_pin->scl_pin, 1);
    delayUs(5);
  }

  gpio_set_level(p_pin->scl_pin, 0);
  delayUs(5);
  gpio_set_level(p_pin->sda_pin, 0);
  delayUs(5);

  gpio_set_level(p_pin->scl_pin, 1);  
  delayUs(5);
  gpio_set_level(p_pin->sda_pin, 1);  
}

bool i2cIsDeviceReady(uint8_t ch, uint8_t dev_addr)
{
  uint8_t rx_data;
  esp_err_t esp_ret;

  if (ch >= I2C_MAX_CH) return false;
  if (is_begin[ch] == false) return false;


  esp_ret = i2c_master_read_from_device(i2c_tbl[ch].i2c_num, 
                                        dev_addr,
                                        &rx_data, 
                                        1,
                                        10);

  if (esp_ret == ESP_OK)
  {
    return true;
  }

  return false;
}

bool i2cReadBytes(uint8_t ch, uint16_t dev_addr, uint16_t reg_addr, uint8_t *p_data, uint32_t length, uint32_t timeout)
{
  bool ret = false;
  esp_err_t esp_ret = ESP_OK;

  if (ch >= I2C_MAX_CH) return false;
  if (i2cIsBegin(ch) == false) return false;

  
  esp_ret = i2c_master_write_read_device(i2c_tbl[ch].i2c_num, 
                                        dev_addr, 
                                        (const uint8_t *)&reg_addr,
                                        1,
                                        p_data, 
                                        length, 
                                        timeout);
  if (esp_ret == ESP_OK)
  {
    ret = true;
  }

  return ret;
}

bool i2cReadData(uint8_t ch, uint16_t dev_addr, uint8_t *p_data, uint32_t length, uint32_t timeout)
{
  bool ret = false;
  esp_err_t esp_ret = ESP_OK;

  if (ch >= I2C_MAX_CH) return false;
  if (i2cIsBegin(ch) == false) return false;

  
  esp_ret = i2c_master_read_from_device(i2c_tbl[ch].i2c_num, dev_addr, p_data, length, timeout);
  if (esp_ret == ESP_OK)
  {
    ret = true;
  }

  return ret;
}

bool i2cWriteBytes(uint8_t ch, uint16_t dev_addr, uint16_t reg_addr, uint8_t *p_data, uint32_t length, uint32_t timeout)
{
  bool ret = false;
  esp_err_t esp_ret = ESP_OK;
  uint8_t tx_buf[length+1];

  if (ch >= I2C_MAX_CH) return false;
  if (i2cIsBegin(ch) == false) return false;

  tx_buf[0] = reg_addr;
  memcpy(&tx_buf[1], p_data, length);
  esp_ret = i2c_master_write_to_device(i2c_tbl[ch].i2c_num, dev_addr, tx_buf, length + 1, timeout);
  if (esp_ret == ESP_OK)
  {
    ret = true;
  }

  return ret;
}

bool i2cWriteData(uint8_t ch, uint16_t dev_addr, uint8_t *p_data, uint32_t length, uint32_t timeout)
{
  bool ret = false;
  esp_err_t esp_ret = ESP_OK;

  if (ch >= I2C_MAX_CH) return false;
  if (i2cIsBegin(ch) == false) return false;

  
  esp_ret = i2c_master_write_to_device(i2c_tbl[ch].i2c_num, dev_addr, p_data, length, timeout);
  if (esp_ret == ESP_OK)
  {
    ret = true;
  }

  return ret;
}
